translation-tool/inputs/source_meta/objects/Hsvc_ProfileBasedHeaderFooterControl__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Controlling the visibility of header and footer based on Profile.</description>
    <fields>
        <fullName>Hsvc_Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEnterpriseUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether logged in  user is Enterprise user</description>
        <label>isEnterpriseUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSelfcareUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSelfcareUser</label>
        <type>Checkbox</type>
    </fields>
    <label>Profile Based Header Footer Control</label>
</CustomObject>